@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- It is strongly recommended to maintain the order of all services as listed to ensure proper startup sequence.
 Note that omitting the enabled attribute will default to enabled = true -->
-<!-- WARNING: The first 3 services (Manager, TestLoadLibraries, and Eventd) must never be disabled. -->
+<!-- WARNING: The first 2 services (Manager and Eventd) must never be disabled. -->
 
 <service-configuration xmlns="http://xmlns.opennms.org/xsd/config/vmmgr">
   <service enabled="true">
@@ -9,11 +9,6 @@ Note that omitting the enabled attribute will default to enabled = true -->
     <class-name>org.opennms.netmgt.vmmgr.Manager</class-name>
     <invoke at="start" pass="0" method="init"/>
     <invoke at="stop" pass="1" method="doSystemExit"/>
-  </service>
-  <service enabled="true">
-    <name>OpenNMS:Name=TestLoadLibraries</name>
-    <class-name>org.opennms.netmgt.vmmgr.Manager</class-name>
-    <invoke at="start" pass="0" method="doTestLoadLibraries"/>
   </service>
   <service enabled="true">
     <name>OpenNMS:Name=Eventd</name>
